--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-	"version": "1.0.10",
+	"version": "1.1.0",
 	"name": "Client Statements",
-	"description": "Send client statements via email",
+	"description": "Makes account statements available in Blesta",
 	"authors": [
 		{
 			"name": "NETLINK IT SERVICES",
